<?xml version="1.0"?>
<package format="3">
  <name>bt_ros_example</name>
  <version>0.0.1</version>
  <description>
     Simple example to test ros2 with BT
  </description>
  <license>BSD</license>
  <maintainer email="marq.razz@gmail.com">Marq Rasmussen</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
